Fixed: App.js: I thought first that the warning error was solved in last commit but it werent, so I watched up the warning message in stack overflow and found out it were about the Switch tags. I needed to replace the div tags with React.Fragment, but when I did I noticed I couldnt have a className just key or props inside it, so instead I did wrap in the mainmenu routes with Switch tags and made another wrapper with Switch tags that were for my submenu routes, which solved the warning. Updated: fetchGem.php: Just updated the comment with the words treasured gemstone, so the developer which reads it know what the query does. Fixed: Nav.js: I went back to the index.js component and took some code that I have tested before. I wanted the functions that is for the Mainmenu meaning renderHome, renderdragons, renderTest and renderCookie renamed the functions renderTest to renderDragonTest and renderCookie to renderForuneCookie. I deleted the function Nav, and instead made it to a class with render, used the state with super props and took in the state allMenus, used allMenus inside the function fetchAllMenus by setstate and fetch all the data from my database with the help of the fetchMenu.php file. As always did a componentDidMount for the fetchAllMenus itself. Just deleted the a tag with the Urllink because now the react router fix it instead. Took in the four Mainmenu functions I talked about above to make them render out , return in the right place. I deleted the text Home, Dragons, DragonTest and Fortune Cookie and instead took in the four functions. I also in return created a new div which have the className nav wrapper and also made a className on the div I had to mainmenu container. Changed the h3 tag to be just a div intead with a special id class named Logo to be able to style it all and change so the Logo wont show on the tablet mode. After that I did some styling: Fixed: _mobile.scss: The id Logo made the element not visable on the mobile mode. The className n

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -1,12 +1,23 @@
-.TEST{
-    
-    color: green;
+
+
+#Logo{
+   display: none;
 }
 
+.nav--wrapper{
+    width: 375px;
+    height: 80px;
+    left: 0;
+}
 
-#Home{
-    height: 300px;
-    width: 300px;
+.mainmenu--container{
+     height: 1900px;
+    width: 100%;
+    border: 1px solid #aaa;
+    width: 100%;
+    margin: 0;
+    padding: 0;  
+    
 }
 
 * {
@@ -25,7 +36,7 @@
 
 .select-box--dragons img{
     
-     height: 60px;
+    height: 60px;
     width: 93px;
     padding: 0;
     margin: 0;
@@ -126,10 +137,7 @@
     border: 1px solid #aaa;
     width: 100%;
     margin: 0;
-    padding: 0;
-    
-    
-    
+    padding: 0;   
     
 }
 
@@ -201,12 +209,13 @@
 }
 
 nav{
-  display: flex;
+    display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 10vh;
     background: lightblue;
     color: white;
+    padding: 0;
     
     
     
@@ -218,6 +227,8 @@ nav{
     justify-content: space-around;
     align-items: center;
     list-style: none;
+    padding: 4px 12px 0px 10px;
+    
     
 }
 
