--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -1,4 +1,9 @@
-.TEST{
-    
-    color: yellow;
+#Logo{
+   display: inline-block;
+}
+
+
+.select-box--home {
+    display: none;
+
 }
